fix hibernate usage and implement basic test